update z-index ordering to prevent discussion posts from overlapping menu

--- a/BookClubFE/src/index.css
+++ b/BookClubFE/src/index.css
@@ -32,7 +32,7 @@ body {
   display: flex;
   justify-content: end;
   gap: 4vw;
-  z-index: 1;
+  z-index: 200;
 }
 
 .nav-menu-mobile {
@@ -43,7 +43,7 @@ body {
   width: 100vw;
   height: 100vh;
   height: 100dvh;
-  z-index: 0;
+  z-index: 1;
 
   transition: left 1s;
 }
